--- a/ProAcc/Views/Home/Home.cshtml
+++ b/ProAcc/Views/Home/Home.cshtml
@@ -527,7 +527,7 @@ background-attachment:local, local, scroll, scroll;
                                     <div class="noUi-origin noUi-background" style="left: 80%;">
                                         <div class="noUi-handle noUi-handle-upper" style="background-color:@color2">
                                             <br>
-                                            <p style="width: 300px !important;margin-left: -35px;margin-top: 5px;"> &nbsp;Post Conversion</p>
+                                            <p style="width: 300px !important;margin-left: -35px;margin-top: 5px;"> &nbsp;Post-Conversion</p>
                                         </div>
                                     </div>
                                     @*<div class="noUi-origin noUi-background" style="left: 80%;background-color: white !important;">
@@ -641,7 +641,7 @@ background-attachment:local, local, scroll, scroll;
 
                     <div class="col-lg-6 card text-center border">
                         <br />
-                        <div class="card-title">Pre Conversion</div>
+                        <div class="card-title">Pre-Conversion</div>
                         <canvas id="chart-Pre_Conversion"></canvas>
                     </div>
                     @*<div class="col-lg-6 card text-center border">
@@ -662,7 +662,7 @@ background-attachment:local, local, scroll, scroll;
                     </div>
                     <div class="col-lg-6 card text-center border">
                         <br />
-                        <div class="card-title">Post Conversion</div>
+                        <div class="card-title">Post-Conversion</div>
 
                         <canvas id="chart-Post_Conversion"></canvas>
 
