--- a/ProAcc/Views/IssueTrack/IndexPage.cshtml
+++ b/ProAcc/Views/IssueTrack/IndexPage.cshtml
@@ -14,11 +14,11 @@
 
         <thead>
             <tr>
-                <th>IssueID</th>
+                <th style="width:70px">Issue ID</th>
                 <th style="width:130px">Issue Name</th>
                 <th style="width:89px">Phase</th>
                 <th>Task</th>
-                <th>Assigned</th>
+                <th>Assigned To</th>
                 <th style="width:130px">Status</th>
                 <th style="width:89px">Created Date</th>
                 <th>Actions</th>
