--- a/ProAcc/Views/ProjectCreation/_PMTaskCreate.cshtml
+++ b/ProAcc/Views/ProjectCreation/_PMTaskCreate.cshtml
@@ -7,7 +7,7 @@
 <a class="card-title" id="prjtUpdate" style="display:none">Update</a>
 
 <hr />
-<div style="padding:1em;" id="PM-Create">
+<div style="padding: 1em;max-width: 99.5%;" id="PM-Create">
     <div class="row">
         <div class="col-6">
             <div class="form-group">
