--- a/ProAcc/Views/Report/OverAllTaskReport.cshtml
+++ b/ProAcc/Views/Report/OverAllTaskReport.cshtml
@@ -598,7 +598,7 @@
                     editoptions: { dataInit: Actual_En_Date }
                 },
                 {
-                    label: 'comments', name: 'Notes', edittype: "textarea",
+                    label: 'Comments', name: 'Notes', edittype: "textarea",
                     wrap: "on"
                     //formatter: function (v) {
                     //     return '<div style="max-height:20px">' $.jgrid.htmlEncode(v) '</div>';
