--- a/ProAcc/Views/Resource/ResourceAllocation.cshtml
+++ b/ProAcc/Views/Resource/ResourceAllocation.cshtml
@@ -207,8 +207,8 @@
             menubar: false,
             viewrecords: true,
             hoverrows: true,
-            // height: 'auto',
-            height: 400,
+             height: 'auto',
+            //height: 400,
             rowNum: 1000,
             caption: '',
             sortable: false,
