--- a/ProAcc/Views/Role/Create.cshtml
+++ b/ProAcc/Views/Role/Create.cshtml
@@ -69,7 +69,7 @@
         //var letters = /[~`!#$%\^&*()+=\-\[\]\\';,/{}|\\":<>\?]/;
         var letters = /[~`!#$%\^&*()+=';,{}|":<>?]/;
         ///^[A-Za-z, ]+$-_/;
-        alert(letters.test(data));
+        //alert(letters.test(data));
         if (letters.test(data)) {
             return false;
         }
