--- a/ProAcc/Views/Shared/_Layout.cshtml
+++ b/ProAcc/Views/Shared/_Layout.cshtml
@@ -375,7 +375,7 @@
                                     <a href="@Url.Action("PMTask", "ProjectMonitor")">
                                         <!-- <i class="metismenu-icon pe-7s-home"></i> -->
                                         <i class="metismenu-icon fa fa-american-sign-language-interpreting"></i>
-                                        PMTask Monitor
+                                        PM Task Monitor
                                     </a>
                                 </li>
                             }
@@ -748,7 +748,7 @@
                                 <li>
                                     <a href="http://123.176.34.15:8021/survey/" target="_blank">
                                         <i class="metismenu-icon fa fa-check-square"></i>
-                                        Questionnaires survey
+                                        Questionnaire survey
                                         <i class="metismenu-state-icon fa caret-left"></i>
                                     </a>
 
