--- a/ProAcc/Views/Activity/_ActivityCreationCreate.cshtml
+++ b/ProAcc/Views/Activity/_ActivityCreationCreate.cshtml
@@ -105,7 +105,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="control-label col-md-4 required">Estimated Hours</label>
+                <label class="control-label col-md-4 required">Est.Hrs HH:MM</label>
                 <div class="col-md-10">
                     <input type="text" class="form-control" id="txtEstimated" placeholder="00:00"/>
                 </div>
@@ -359,7 +359,16 @@
              $("#btntivityCreUpdate").prop("disabled", true);
         }
     }
+    $('#txtEstimated').keyup(function (event) {
 
+        this.value = this.value
+            .replace(/[^\d:]/g, '')             // numbers and decimals only
+            .replace(/(^[\d]{2})[\d]/g, '$1')   // not more than 2 digits at the beginning
+            .replace(/(\::*)\:/g, '$1')         // decimal can't exist more than once
+            //.replace(/(\:[\d]{2})./g, '$1');    // not more than 4 digits after decimal
+            .replace(/(\:[0-5][0-9]{1})./g, '$1');
+
+    });
     $("#btnActivityCreCreate").on("click", function () {
         
         var Task = $("#txtTask").val();
