--- a/ProAcc/Views/Customers/GetCustomerById.cshtml
+++ b/ProAcc/Views/Customers/GetCustomerById.cshtml
@@ -338,7 +338,7 @@
             phone = $('#txtCustomerPhone').val();
             phone = phone.replace(/[^0-9]/g,'');
             if (phone.length != 10) {
-                $("#lblCustomerPhone").html("Phone number must be 10 digits").show().fadeOut(5000);
+                $("#lblCustomerPhone").html("Phone number must be 10 digits").show();
                
             }
             else {
@@ -454,9 +454,9 @@
         }
         else if (custphone=="")
          {
-            // $("#error-msg").html("Please enter the Customer Phone").show().fadeOut(2000);
-            $("#lblCustomerPhone").html("Please enter the Customer Phone").show().fadeOut(2000);
-        }
+             // $("#error-msg").html("Please enter the Customer Phone").show().fadeOut(2000);
+             $("#lblCustomerPhone").html("Please enter the Customer Phone").show();
+         }
         else if (custEmail=="")
         {
             $("#lblCustomerEmail").html("Please enter the Customer Email").show().fadeOut(2000);
