--- a/ProAcc/Views/ProjectMonitor/Monitor.cshtml
+++ b/ProAcc/Views/ProjectMonitor/Monitor.cshtml
@@ -7,7 +7,7 @@
     document.body.style.zoom = "90%";
     
     $(document).ready(function () {
-        $(".app-main_Scroll").css("height", "calc(100vh - 57px)");
+        $(".app-main_Scroll").css("height", "calc(100vh - 62px)");
         //var PhaseId= 
         //debugger;
        // LoadTable(1);
@@ -340,6 +340,7 @@
             menubar: false,
             viewrecords: true,
             hoverrows: true,
+            //height: 'auto',
             height: 400,
             rowNum: 1000,
             caption: '',
