--- a/ProAcc/Views/Role/_RoleIndex.cshtml
+++ b/ProAcc/Views/Role/_RoleIndex.cshtml
@@ -7,31 +7,31 @@
 <link href="~/Asset/Scripts/Datatable/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
 <script src="~/Asset/Scripts/Datatable/jquery.dataTables.min.js"></script>
 <script src="~/Asset/Scripts/Datatable/dataTables.bootstrap4.min.js"></script>
-
-<table class="table" id="tblRoleCreation">
-    <thead>
-        <tr>
-            <th>Role Names</th>
-            <th>Actions</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
+<div style="max-width:99.5%;">
+    <table class="table" id="tblRoleCreation">
+        <thead>
             <tr>
-                <td>
-                    <a class="txtG" value="@item.RoleName">@item.RoleName</a>
-                </td>
-
-                <td>
-                    <a href="#" id="btnEdit" class="editRole fa fa-edit"></a><input type="hidden" value="@item.RoleId" /> 
-                    @*<a href="#" class="btnRoleDelete fa fa-trash"></a><input type="hidden" value="@item.RoleId" />*@
-                </td>
+                <th>Role Names</th>
+                <th>Actions</th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        <a class="txtG" value="@item.RoleName">@item.RoleName</a>
+                    </td>
 
+                    <td>
+                        <a href="#" id="btnEdit" class="editRole fa fa-edit"></a><input type="hidden" value="@item.RoleId" />
+                        @*<a href="#" class="btnRoleDelete fa fa-trash"></a><input type="hidden" value="@item.RoleId" />*@
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
 <script type="text/javascript">
      $(document).ready(function () {
          $("#tblRoleCreation").dataTable({
