--- a/ProAcc/Views/User/Index.cshtml
+++ b/ProAcc/Views/User/Index.cshtml
@@ -11,7 +11,7 @@
 
 <a class="card-title">User List</a>
 <hr />
-<table class="table" id="tblUserTable">
+<table class="table" id="tblUserTable" style="max-width: 99.5%;">
     <thead>
         <tr>
             <th>
