mail for Issue Track (To)

--- a/ProAcc/Views/IssueTrack/IndexPage.cshtml
+++ b/ProAcc/Views/IssueTrack/IndexPage.cshtml
@@ -18,7 +18,7 @@
                 <th style="width:130px">Issue Name</th>
                 <th style="width:89px">Phase</th>
                 <th>Task</th>
-                <th>Assigned To</th>
+                <th>Assigned</th>
                 <th style="width:130px">Status</th>
                 <th style="width:89px">Created Date</th>
                 <th>Actions</th>
