--- a/ProAcc/Views/Activity/_ActivityCreationIndex.cshtml
+++ b/ProAcc/Views/Activity/_ActivityCreationIndex.cshtml
@@ -29,7 +29,7 @@
         </thead>
         <tbody>
             @*@{int j = 1;}*@
-            @foreach (var item in Model)
+            @foreach (var item in ViewBag.AMM)
             {
                 <tr>
                     @*<td>
@@ -44,22 +44,22 @@
                             <a class="txtG" value="@item.Cre_on">@item.Cre_on</a>
                         </td>*@
                     <td>
-                        <a class="txtG" value="@item.BuildingBlock_id">@item.Buldingblock.Block_Name</a>
+                        <a class="txtG" value="@item.BuildingBlock_id">@item.Buldingblock</a>
                     </td>
                     <td>
-                        <a class="txtG" value="@item.PhaseID">@item.PhaseMaster.PhaseName</a>
+                        <a class="txtG" value="@item.PhaseID">@item.Phase</a>
                     </td>
                     <td>
-                        <a class="txtG" value="@item.RoleID">@item.RoleMaster.RoleName</a>
+                        <a class="txtG" value="@item.RoleID">@item.Role</a>
                     </td>
                     <td>
-                        <a class="txtG" value="@item.ApplicationAreaID">@item.ApplicationAreaMaster.ApplicationArea</a>
+                        <a class="txtG" value="@item.ApplicationAreaID">@item.ApplicationArea</a>
                     </td>
                     <td>
                         <a class="txtG" value="@item.Sequence_Num">@item.Sequence_Num</a>
                     </td>
                     <td>
-                        <a class="txtG" value="@item.EST_hours">@item.EST_hours</a>
+                        <a class="txtG" value="@item.EST_hours">@item.EST_hours1</a>
                     </td>
                     <td>
                         <a href="#" id="btnprjtEdit" class="editActivityCreation fa fa-edit"></a><input type="hidden" value="@item.Activity_ID" />
@@ -96,6 +96,7 @@
             type: "GET",
             data: { id: id },
             success: function (result) {
+                debugger;
                   $("#activityrid").val(result.Activity_ID);
                     $("#txtTask").val(result.Task);
                     $("#txtSequence").val(result.Sequence_Num);
@@ -107,7 +108,7 @@
                     $('#drpRole').attr("disabled", true); 
                 $("#drphiddenRole").val(result.RoleID);
                 //var EST_hours = result.EST_hours.replace(".", ":");
-                $("#txtEstimated").val(result.EST_hours); //.replace(".", ":")
+                $("#txtEstimated").val(result.EST_hours1); //.replace(".", ":")
                     $("#drpApplicationArea").val(result.ApplicationAreaID);
                     $("#actcre_on").val(result.Cre_on);
                     $("#actcre_By").val(result.Cre_By);
