--- a/ProAcc/Views/Shared/_Layout.cshtml
+++ b/ProAcc/Views/Shared/_Layout.cshtml
@@ -735,7 +735,7 @@
                                         <li>
                                             <a href="@Url.Action("IndexPage", "IssueTrack")">
                                                 <i class="metismenu-icon pe-7s-diamond"></i>
-                                                Index
+                                                Issue List
                                             </a>
                                         </li>
 
