--- a/ProAcc/Views/Customers/Create.cshtml
+++ b/ProAcc/Views/Customers/Create.cshtml
@@ -74,7 +74,7 @@
                 </div>
             </div>
 
-            <div class="form-group">
+            @*<div class="form-group">
                     <label class="control-label col-md-5 required">Contact Person Phone</label>
                     <div class="col-md-10">
                         <input type="tel" class="form-control" id="txtCustomerPhone" maxlength="10" />
@@ -82,18 +82,18 @@
                     <div>
                         &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblCustomerPhone">&nbsp;</span>
                     </div>
-            </div>
-            @*<div class="form-group">
+            </div>*@
+            <div class="form-group">
                 <label class="control-label col-md-5 required">Contact Person Phone</label>
                 <div class="col-md-10">
                     <input type="hidden" class="form-control" id="selectedCountry">
                     <input type="tel" class="form-control" id="txtCustomerPhone" maxlength="15" style="width: 135%;">
                 </div>
                 <div>
-                    &nbsp;&nbsp;&nbsp; <span id="valid-msg" class="hide Class_span">&nbsp;</span>
+                    @*&nbsp;&nbsp;&nbsp; <span id="valid-msg" class="hide Class_span">&nbsp;</span>*@
                     &nbsp;&nbsp;&nbsp;<span id="error-msg" class="hide Class_span">&nbsp;</span>
                 </div>
-            </div>*@
+            </div>
         </div>
     </div>
     <div class="row">
@@ -230,68 +230,86 @@
              validatecustomer()
         });
 
-       // $("#txtCustomerPhone").blur(function () {
+        $("#txtCustomerPhone").blur(function () {
 
-       //     phone = $(this).val();
-       //     phone = phone.replace(/[^0-9]/g,'');
-       //     if (phone.length != 10) {
-       //         $("#lblCustomerPhone").html("Phone number must be 10 digits").show().fadeOut(2000);
-       //         validatecustomer();
+            phone = $(this).val();
+            phone = phone.replace(/[^0-9]/g,'');
+            if (phone.length != 10) {
+                $("#lblCustomerPhone").html("Phone number must be 10 digits").show().fadeOut(2000);
+                validatecustomer();
+            }
+            else {
+                $("#lblCustomerPhone").html("").hide();
+                validatecustomer();
+            }
+
+       });
+
+        var input = document.querySelector("#txtCustomerPhone"),
+            errorMsg = document.querySelector("#error-msg");
+        //validMsg = document.querySelector("#valid-msg");
+
+    // Error messages based on the code returned from getValidationError
+    //var errorMap = ["Invalid number", "Invalid country code", "Too short", "Too long", "Invalid number"];
+    var errorMap = ["Please enter a valid mobile number", "Invalid country code", "Please enter a valid mobile number", "Please enter a valid mobile number", "Invalid number"];
+
+    var intl = window.intlTelInput(input, {
+        utilsScript: "../Asset/js/utils.js",
+        separateDialCode: true,
+        //preferredCountries: ["in", "us", "dk", "gb"]
+       //var countryCode = intl.getSelectedCountryData().iso2,
+       //  $("#selectedCountry").val(countryCode)
+    });
+
+    var reset = function() {
+        input.classList.remove("error");
+        errorMsg.innerHTML = "";
+        errorMsg.classList.add("hide");
+        //validMsg.classList.add("hide");
+        };
+
+        var countryCode;
+        input.addEventListener('countrychange', function () {
+            countryCode = intl.getSelectedCountryData().iso2;
+            $("#selectedCountry").val(countryCode);
+            $("#txtCustomerPhone").val("");
+        })
+
+       //// Validate on blur event
+       // input.addEventListener('blur', function () {
+       // reset();
+       // if(input.value.trim()){
+       //     if(intl.isValidNumber()){
+       //         validMsg.classList.remove("hide");
+
+       //     }else{
+       //         input.classList.add("error");
+       //         var errorCode = intl.getValidationError();
+       //         errorMsg.innerHTML = errorMap[errorCode];
+       //         errorMsg.classList.remove("hide");
        //     }
-       //     else {
-       //         $("#lblCustomerPhone").html("").hide();
-       //         validatecustomer();
-       //     }
+       // }
+       //   validatecustomer();
+       // });
+        function TaskPhone() {
+            reset();
+            if (input.value.trim()) {
+                if (intl.isValidNumber()) {
+                    validMsg.classList.remove("hide");
 
-       //});
+                } else {
+                    input.classList.add("error");
+                    var errorCode = intl.getValidationError();
+                    errorMsg.innerHTML = errorMap[errorCode];
+                    errorMsg.classList.remove("hide");
+                }
+            }
+            validatecustomer();
+        }
 
-    //    var input = document.querySelector("#txtCustomerPhone"),
-    //    errorMsg = document.querySelector("#error-msg"),
-    //    validMsg = document.querySelector("#valid-msg");
-
-    //// Error messages based on the code returned from getValidationError
-    ////var errorMap = ["Invalid number", "Invalid country code", "Too short", "Too long", "Invalid number"];
-    //var errorMap = ["Invalid number", "Invalid country code", "Please enter a valid mobile number", "Please enter a valid mobile number", "Invalid number"];
-
-    //var intl = window.intlTelInput(input, {
-    //    utilsScript: "../Asset/js/utils.js",
-    //    separateDialCode: true
-    //});
-
-    //var reset = function() {
-    //    input.classList.remove("error");
-    //    errorMsg.innerHTML = "";
-    //    errorMsg.classList.add("hide");
-    //    validMsg.classList.add("hide");
-    //    };
-
-    //    var countryCode;
-    //    input.addEventListener('countrychange', function () {
-    //        countryCode = intl.getSelectedCountryData().iso2;
-    //        $("#selectedCountry").val(countryCode);
-    //        $("#txtCustomerPhone").val("");
-    //    })
-
-    //// Validate on blur event
-    //    input.addEventListener('blur', function () {
-    //    reset();
-    //    if(input.value.trim()){
-    //        if(intl.isValidNumber()){
-    //            validMsg.classList.remove("hide");
-
-    //        }else{
-    //            input.classList.add("error");
-    //            var errorCode = intl.getValidationError();
-    //            errorMsg.innerHTML = errorMap[errorCode];
-    //            errorMsg.classList.remove("hide");
-    //        }
-    //    }
-    //      validatecustomer();
-    //});
-
-    //// Reset on keyup/change event
-    //input.addEventListener('change', reset);
-    //input.addEventListener('keyup', reset);
+    // Reset on keyup/change event
+    input.addEventListener('change', reset);
+    input.addEventListener('keyup', reset);
 
 
             var typingTimer;            //timer identifier
@@ -327,17 +345,17 @@
             typingTimer = setTimeout(TaskPhone, doneTypingInterval);
         });
 
-        function TaskPhone() {
-            phone = $("#txtCustomerPhone").val();
-            phone = phone.replace(/[^0-9]/g,'');
-            if (phone.length != 10) {
-                $("#lblCustomerPhone").html("Phone number must be 10 digits").show();
-            }
-            else {
-                $("#lblCustomerPhone").html("").show();
-            }
-            validatecustomer();
-        }
+        //function TaskPhone() {
+        //    phone = $("#txtCustomerPhone").val();
+        //    phone = phone.replace(/[^0-9]/g,'');
+        //    if (phone.length != 10) {
+        //        $("#lblCustomerPhone").html("Phone number must be 10 digits").show();
+        //    }
+        //    else {
+        //        $("#lblCustomerPhone").html("").show();
+        //    }
+        //    validatecustomer();
+        //}
         
         //$("#txtCustomerEmail").on("blur", function (event) {
 
@@ -364,8 +382,8 @@
 
             var lblCompanyName = $("#lblCompanyName").text().trim();
             var lblIndustrySector = $("#lblIndustrySector").text().trim();
-            var lblcustphone = $("#lblCustomerPhone").text().trim();
-            //var lblcustphone = $("#error-msg").text().trim();
+            //var lblcustphone = $("#lblCustomerPhone").text().trim();
+            var lblcustphone = $("#error-msg").text().trim();
             var lblcustEmail = $("#lblCustomerEmail").text().trim();
 
             if (CompanyName.length > 0 && IndustrySector.length > 0 && Contact.length > 0 && custphone.length > 0 && custEmail.length > 0 &&
@@ -412,8 +430,8 @@
         }
         else if (custphone == "")
         {
-            $("#lblCustomerPhone").html("Please enter the Customer Phone").show();
-            //$("#error-msg").html("Please enter a valid mobile number").show().fadeOut(2000);
+           // $("#lblCustomerPhone").html("Please enter the Customer Phone").show();
+            $("#error-msg").html("Please enter a valid mobile number").show().fadeOut(2000);
         }
         else if (custEmail=="")
         {
